Convert to cirrus project

--- a/cirrus.conf
+++ b/cirrus.conf
@@ -1,13 +1,13 @@
 [package]
 name = fixed_income
 version = 0.0.0
-description = PACKAGE DESCRIPTION HERE
-organization = ORGANIZATION HERE
+description = Package based on work from Chicago Booth's Fixed Income Asset Pricing course, 35130.
+organization =
 version_file = src/fixed_income/__init__.py
 history_file = HISTORY.md
-author = danielmcampos
-author_email = EMAIL_HERE
-url = PACKAGE_URL_HERE
+author = Daniel Campos
+author_email = daniel.m.campos@icloud.com
+url = https://github.com/Bocha84/fixed-income
 find_packages = src
 
 [gitflow]
@@ -19,7 +19,7 @@ feature_branch_prefix = feature/
 
 [test-default]
 where = tests/unit
-mode = tox
+mode = nosetests
 
 [quality]
 threshold = 10
