Add build config to cirrus conf

--- a/cirrus.conf
+++ b/cirrus.conf
@@ -16,6 +16,9 @@ release_branch_prefix = release/
 feature_branch_prefix = feature/
 
 [build]
+extra_requirements = 'test-requirements.txt'
+python = python3.6
+
 
 [test-default]
 where = tests/unit
