Update package description

--- a/cirrus.conf
+++ b/cirrus.conf
@@ -1,7 +1,7 @@
 [package]
 name = fixed_income
 version = 0.0.0
-description = Package based on work from Chicago Booth's Fixed Income Asset Pricing course, 35130.
+description = Basic package for fitting yield-curves and other things.
 organization =
 version_file = src/fixed_income/__init__.py
 history_file = HISTORY.md
