--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
   - "3.6"
 install: "pip install -r requirements.txt -r test-requirements.txt"
 # command to run tests
-script: nosetests
+script: pytest
 
 notifications:
   email: false
